--- a/src/main/resources/META-INF/resources/PersonelTanim.xhtml
+++ b/src/main/resources/META-INF/resources/PersonelTanim.xhtml
@@ -125,6 +125,7 @@
                                    itemLabel="#{birim.birimAdi}"/>
                 </p:selectOneMenu>
 
+                <p:outputLabel/>
                 <p:commandButton value="Kaydet" actionListener="#{personelBean.savePersonel()}" ajax="false"
                                  icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
                 <p:commandButton value="Sil" actionListener="#{personelBean.delete()}" ajax="false"
