--- a/src/main/resources/META-INF/resources/home.xhtml
+++ b/src/main/resources/META-INF/resources/home.xhtml
@@ -31,9 +31,9 @@
                 <p:menuitem value="Tetkik Kabul" url="/TetkikKabul.xhtml" includeViewParams="MR"/>
             </p:submenu>
             <p:submenu label="Randevu İşlemleri" icon="ui-icon-calendar">
-                <p:menuitem value="Randevu Şablon" url="pages/RandevuSablon.xhtml" icon="ui-icon-calendar"/>
-                <p:menuitem value="Randevu Seans" url="pages/RandevuSeans.xhtml" icon="ui-icon-calendar"/>
-                <p:menuitem value="Randevu Alma" url="pages/Randevu.xhtml" icon="ui-icon-calendar"/>
+                <p:menuitem value="Randevu Şablon" url="/RandevuSablon.xhtml" icon="ui-icon-calendar"/>
+                <p:menuitem value="Randevu Seans" url="/RandevuSeans.xhtml" icon="ui-icon-calendar"/>
+                <p:menuitem value="Randevu Alma" url="/Randevu.xhtml" icon="ui-icon-calendar"/>
             </p:submenu>
         <p:menuitem value="Çıkış" style="float: right" action="#{sessionInitializer.exit}" icon="ui-icon-close"/>
         </p:menubar>
