--- a/src/main/resources/META-INF/resources/BirimTanim.xhtml
+++ b/src/main/resources/META-INF/resources/BirimTanim.xhtml
@@ -100,8 +100,8 @@
                                  icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
                 <p:commandButton value="Sil" actionListener="#{birimBean.delete()}" ajax="false"
                                  icon="ui-icon-trash" style="left: 150px"/>
-                <p:commandButton value="Yeni" actionListener="#{birimBean.reset()}" ajax="false"
-                                 icon="ui-icon-trash" style="left: 175px"/>
+                <!--<p:commandButton value="Yeni" actionListener="#{birimBean.reset()}" ajax="false"-->
+                                 <!--icon="ui-icon-trash" style="left: 175px"/>-->
 
             </h:panelGrid>
         </div>
