--- a/src/main/resources/META-INF/resources/RoleTanim.xhtml
+++ b/src/main/resources/META-INF/resources/RoleTanim.xhtml
@@ -84,6 +84,8 @@
 
                 <p:commandButton value="Kaydet" actionListener="#{roleBean.saveRole()}" ajax="false"
                                  icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+                <p:commandButton value="Sil" actionListener="#{roleBean.deleteRole()}" ajax="false"
+                                 icon="ui-icon-trash" style="left: 135px"/>
             </h:panelGrid>
         </div>
     </h:form>
